# tock

./: Cargo.toml  Makefile  deny.toml
.github/workflows/: ci-zr.yml
arch/riscv/: Cargo.toml
arch/rv32i/: Cargo.toml
arch/rv32i/src/: lib.rs  pmp.rs  syscall.rs
boards/: README.md
boards/build_scripts/: Cargo.toml  tock_kernel_layout.ld
boards/components/: Cargo.toml
boards/components/src/: flash.rs
boards/opentitan/earlgrey-cw310/: Cargo.toml  Makefile  layout.ld  rom_layout.ld
boards/opentitan/earlgrey-cw310-rom-only/: Cargo.toml  Makefile  layout.ld  run.sh  test_layout.ld
boards/opentitan/src/: io.rs  main.rs  otbn.rs  pinmux_layout.rs  polyfill.rs
boards/opentitan/src/tests/: aes_test.rs  flash.rs  multi_alarm.rs
boards/tutorials/nrf52840dk-attestation-tutorial/: Cargo.toml
boards/tutorials/nrf52840dk-attestation-tutorial/src/: main.rs
capsules/aes_gcm/: Cargo.toml
capsules/core/: Cargo.toml  README.md
capsules/core/src/: driver.rs  lib.rs  reset_manager.rs
capsules/core/src/virtualizers/: mod.rs  timeout_mux.rs  virtual_alarm.rs  virtual_flash.rs
capsules/extra/: Cargo.toml  README.md
capsules/extra/src/: info_flash.rs  lib.rs  oneshot_digest.rs  opentitan_alerthandler.rs  opentitan_attestation.rs  opentitan_sysrst.rs  pattgen.rs  reset_manager.rs
capsules/extra/src/oneshot_digest/: cshake.rs  hash.rs  hmac.rs  kmac.rs  mod.rs  shake.rs  utils.rs
capsules/extra/src/public_key_crypto/: asymmetric_crypto.rs  mod.rs
capsules/extra/src/usb/: cdc.rs  ctap.rs  keyboard_hid.rs  mod.rs  usb_user2.rs  usbc_client.rs  usbc_client_ctrl.rs
capsules/system/: Cargo.toml
chips/earlgrey/: Cargo.toml
chips/earlgrey/src/: adc_ctrl.rs  aes.rs  alert_handler.rs  aon_timer.rs  attestation.rs  boot_certificate.rs  chip.rs  chip_config.rs  clkmgr.rs  edn.rs  entropy_src.rs  epmp.rs  gpio.rs  i2c.rs  interrupts.rs  keymgr.rs  kmac.rs  lib.rs  otp.rs  pattgen.rs  pinmux.rs  plic.rs  pwrmgr.rs  rstmgr.rs  rv_core_ibex.rs  sensor_ctrl.rs  spi_device.rs  spi_host.rs  sram_ret.rs  timer.rs  uart.rs  usbdev.rs  utils.rs
chips/earlgrey/src/flash_ctrl/: bank.rs  chunk.rs  fifo_level.rs  flash_address.rs  flash_ctrl.rs  info_partition_type.rs  memory_protection.rs  mod.rs  page.rs  page_index.rs  page_position.rs  tests.rs
chips/earlgrey/src/registers/: alert_handler_regs.rs  flash_ctrl_regs.rs  mod.rs  rv_plic_regs.rs  sram_ctrl_regs.rs  top_earlgrey.rs
chips/lowrisc/: Cargo.toml
chips/lowrisc/src/: adc_ctrl.rs  aes.rs  aon_timer.rs  csrng.rs  edn.rs  entropy_src.rs  flash_ctrl.rs  gpio.rs  hmac.rs  i2c.rs  keymgr.rs  kmac.rs  lib.rs  otbn.rs  otp.rs  pattgen.rs  rv_core_ibex.rs  spi_device.rs  spi_host.rs  sysrst_ctrl.rs  timer.rs  uart.rs  utils.rs
chips/lowrisc/src/ffi/: hardened.rs  mod.rs  polyfill.rs  status.rs
chips/lowrisc/src/ffi/cryptolib/: integrity.rs  key_transport.rs  mod.rs  mux.rs  oneshot_digest.rs  timeouts.rs
chips/lowrisc/src/ffi/cryptolib/ecc/: ecdsa.rs  mod.rs
chips/lowrisc/src/registers/: adc_ctrl_regs.rs  aon_timer_regs.rs  flash_ctrl_regs.rs  gpio_regs.rs  i2c_regs.rs  mod.rs  otbn_regs.rs  otp_ctrl_regs.rs  pattgen_regs.rs  rv_timer_regs.rs  spi_device_regs.rs  sram_ctrl_regs.rs  uart_regs.rs  usbdev_regs.rs
chips/lowrisc/src/usb/: available_buffer_list.rs  buffer.rs  buffer_index.rs  chunk_index.rs  chunk_index_iterator.rs  endpoint.rs  endpoint_index.rs  endpoint_index_iterator.rs  endpoint_state.rs  interrupt.rs  mod.rs  packet_received.rs  packet_size.rs  request.rs  usb.rs  usb_address.rs  usb_main.rs  utils.rs
chips/nrf52/src/: usbd.rs
chips/rp2040/src/: usb.rs
chips/sam4l/src/usbc/: mod.rs
chips/segger/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: process_loading.rs  syscall_driver.rs
kernel/src/hil/: flash.rs  key_transport.rs  mod.rs  oneshot_digest.rs  opentitan_alerthandler.rs  opentitan_attestation.rs  opentitan_sysrst.rs  pattgen.rs  reset_managment.rs  retention_ram.rs  time.rs  uart.rs  usb.rs
kernel/src/hil/public_key_crypto/: ecc.rs  mod.rs
kernel/src/utilities/: helpers.rs  mod.rs  target_test.rs
libraries/enum_primitive/: Cargo.toml
libraries/riscv-csr/: Cargo.toml
libraries/tock-cells/: Cargo.toml
libraries/tock-tbf/: Cargo.toml
tools/qemu-runner/src/: main.rs
tools/tock-configurator/: .gitignore  Cargo.toml
tools/tock-configurator/chips/common/src/: cortex_m4.rs
tools/tock-configurator/chips/lowrisc/: Cargo.toml
tools/tock-configurator/chips/lowrisc/src/: aes.rs  alert_handler.rs  attestation.rs  chip.rs  epmp.rs  flash.rs  flash_memory_protection.rs  gpio.rs  hmac.rs  i2c.rs  lib.rs  pattgen.rs  peripherals.rs  reset_manager.rs  rng.rs  spi.rs  system_reset_controller.rs  systick.rs  timer.rs  uart.rs  usb.rs  watchdog.rs
tools/tock-configurator/chips/lowrisc/src/ffi/: mod.rs
tools/tock-configurator/chips/lowrisc/src/ffi/cryptolib/: ecdsa.rs  mod.rs  mux.rs  oneshot_digest.rs
tools/tock-configurator/chips/nrf52833/src/: ble.rs  flash.rs  gpio.rs  peripherals.rs  rng.rs  temperature.rs  timer.rs  twi.rs  uart.rs
tools/tock-configurator/configurator/: Cargo.toml
tools/tock-configurator/configurator/src/: cli.rs  lib.rs  main.rs  menu.rs  state.rs
tools/tock-configurator/configurator/src/capsule/: aes.rs  alert_handler.rs  asymmetric_crypto.rs  attestation.rs  console.rs  gpio.rs  hmac.rs  info_flash.rs  ipc.rs  kv_driver.rs  led.rs  lldb.rs  mod.rs  oneshot_digest.rs  pattgen.rs  reset_manager.rs  system_reset_controller.rs  usb.rs
tools/tock-configurator/configurator/src/utils/: items.rs  mod.rs
tools/tock-configurator/generator/: Cargo.toml  Makefile  main.rs
tools/tock-configurator/generator/examples/: earlgrey.rs
tools/tock-configurator/generator/src/: lib.rs  tock_main.rs  util.rs
tools/tock-configurator/parse/: Cargo.toml
tools/tock-configurator/parse-macros/src/: component.rs  config_fields.rs
tools/tock-configurator/parse/src/: component.rs  config.rs  context.rs  macros.rs
tools/tock-configurator/parse/src/platform/: mod.rs  scheduler.rs  scheduler_timer.rs  syscall_filter.rs
(+39 files in other folders)
