# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "rv32i"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0 OR MIT"

[dependencies]
kernel = { path = "../../kernel" }
tock-registers = { path = "../../libraries/tock-register-interface" }
riscv-csr = { path = "../../libraries/riscv-csr" }
riscv = { path = "../riscv" }


[lints]
workspace = true

[features]
# Separate the IRQ stack from the main kernel stack
separate_irq_stack = []
