# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "earlgrey"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lowrisc = { path = "../lowrisc" }
rv32i = { path = "../../arch/rv32i" }
kernel = { path = "../../kernel" }

[features]
clkmgr_tests = []
sival = []
test_alerthandler = ["lowrisc/test_alerthandler"]
test_sram_ret = ["lowrisc/test_sram_ret"]
test_aon_timer = ["lowrisc/test_aon_timer"]
