# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "earlgrey"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0 OR MIT"

[dependencies]
lowrisc = { path = "../lowrisc" }
rv32i = { path = "../../arch/rv32i" }
kernel = { path = "../../kernel" }

[lints]
workspace = true

[features]
# Enable when linking with OpenTitan FFI dependencies
ffi = []
clkmgr_tests = []
sival = []
qemu = []
separate_irq_stack = ["rv32i/separate_irq_stack"]
test_alerthandler = ["lowrisc/test_alerthandler"]
test_sram_ret = ["lowrisc/test_sram_ret"]
test_rv_timer = ["lowrisc/test_rv_timer"]
test_aon_timer = ["lowrisc/test_aon_timer"]
test_flash_ctrl = []
unlock_dice_info_pages = []
