# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "earlgrey-cw310"
version.workspace = true
authors.workspace = true
build = "build.rs"
edition.workspace = true
license = "Apache-2.0 OR MIT"

[dependencies]
components = { path = "../../components" }
rv32i = { path = "../../../arch/rv32i" }
kernel = { path = "../../../kernel" }
earlgrey = { path = "../../../chips/earlgrey"}
lowrisc = { path = "../../../chips/lowrisc" }
tock-tbf = { path = "../../../libraries/tock-tbf" }

capsules-core = { path = "../../../capsules/core" }
capsules-extra = { path = "../../../capsules/extra" }
capsules-aes-gcm = { path = "../../../capsules/aes_gcm" }
capsules-system = { path = "../../../capsules/system" }

[build-dependencies]
tock_build_scripts = { path = "../../build_scripts" }


[features]
default = ["qemu", "sival"]
test_sram_ret = ["earlgrey/test_sram_ret"]
test_sysrst_ctrl = ["lowrisc/test_sysrst_ctrl"]
test_rv_timer = ["lowrisc/test_rv_timer"]
test_aon_timer = ["lowrisc/test_aon_timer"]
test_alerthandler = ["earlgrey/test_alerthandler", "lowrisc/test_alerthandler"]
test_resetmanager = ["capsules-extra/test_resetmanager"]
test_otp = ["lowrisc/test_otp"]
test_pattgen = ["lowrisc/test_pattgen"]
test_flash_ctrl = ["earlgrey/test_flash_ctrl"]
test_clkmgr = ["earlgrey/clkmgr_tests"]
test_cryptolib = ["ffi", "lowrisc/test_cryptolib"]

# OpenTitan SoC design can be synthesized or compiled for different targets. A
# target can be a specific FPGA board, an ASIC technology, or a simulation tool.
# Please see: https://docs.opentitan.org/doc/ug/getting_started/ for further
# information.
#
# OpenTitan CPU and possibly other components must be configured appropriately
# for a specific target:
#    - fpga:
#      OpenTitan SoC design running on CW310 FPGA.
#
#    - silicon:
#      OpenTitan SoC design running on PRODA silicon.
#
#    - sim_verilator:
#      OpenTitan SoC design simulated in Verilator.
fpga = []
qemu = ["earlgrey/qemu"]
silicon = ["sival"]
sim_verilator = []
unlock_dice_info_pages = ["earlgrey/unlock_dice_info_pages"]

# This is used to indicate that we intend to use this kernel with a silicon
# validation execution environment.
sival = ["earlgrey/sival"]

# Enable when linking with OpenTitan FFI dependencies
ffi = []

# This is used to indicate that we should include tests that only pass on
# hardware.
hardware_tests = []

# Separate the IRQ stack from the kernel stack.
separate_irq_stack = ["earlgrey/separate_irq_stack"]

[lints]
workspace = true
