# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright OxidOS Automotive SRL 2024
#
# Author: Irina Nita <irina.nita@oxidos.io>
# Author: Darius Jipa <darius.jipa@oxidos.io>

[package]
name = "tock-configurator"
version.workspace = true
edition.workspace = true
rust-version = "1.70"

[features]
default = ["gui"]
gui = ["cursive", "cursive-aligned-view"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
cursive = { version = "0.20.0", optional = true }
parse = { path = "../parse" }
cursive-aligned-view = { version = "0.6.0", optional = true }
serde_json = "1.0.116"
serde = { version = "1.0.197", default-features = false, features = [
    "derive",
    "alloc",
] }
# Supported chips
lowrisc = { path = "../chips/lowrisc" }
