# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "lowrisc"
version.workspace = true
edition.workspace = true

[dependencies]
parse = { path = "../../parse" }
serde = { version = "1.0.197", default-features = false, features = [
	"derive",
	"alloc",
]}
serde_json = "1.0.116"
quote = "1.0.36"

proc-macro2 = "1.0.86"
